tests/machine/x/lua/count_builtin.error
line 21: run error: exit status 1
lua: /workspace/mochi/tests/machine/x/lua/count_builtin.lua:21: attempt to call a nil value (global 'count')
stack traceback:
	/workspace/mochi/tests/machine/x/lua/count_builtin.lua:21: in main chunk
	[C]: in ?

